# mailgun-sdk

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  message.rs
