[package]
name = "mailgun-sdk"
version = "0.1.0"
authors = ["rideron89"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multipart = "0.16.1"
reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.5.1"
